--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,36 @@
    }
 }
 
-html {
-   font-family: Pally, system-ui, sans-serif;
-   @apply bg-slate-50;
+@layer utilities {
+   html {
+      font-family: Pally, system-ui, sans-serif;
+      @apply bg-gray-50;
+   }
+
+   input:focus ~ label,
+   input:not(:placeholder-shown) ~ label {
+      @apply -translate-y-2 text-sm cursor-text;
+   }
+
+   input:-webkit-autofill,
+   input:-webkit-autofill:hover,
+   input:-webkit-autofill:focus,
+   textarea:-webkit-autofill,
+   textarea:-webkit-autofill:hover,
+   textarea:-webkit-autofill:focus,
+   select:-webkit-autofill,
+   select:-webkit-autofill:hover,
+   select:-webkit-autofill:focus {
+      border: 1px solid #212121;
+      -webkit-text-fill-color: #212121;
+      -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+      transition: background-color 5000s ease-in-out 0s;
+   }
+
+   input[type="search"]::-webkit-search-decoration,
+   input[type="search"]::-webkit-search-cancel-button,
+   input[type="search"]::-webkit-search-results-button,
+   input[type="search"]::-webkit-search-results-decoration {
+      -webkit-appearance: none;
+   }
 }
